packages/front-end/components/EditExperiment/ScreenshotUpload.module.scss
@import "../../styles/colors.scss";

.droparea {
  z-index: 910;
  position: relative;
  width: 100%;
  text-align: center;

  .message {
    display: none;
    position: absolute;
    top: 50%;
    line-height: 30px;
    margin-top: -15px;
    left: 0;
    right: 0;
    font-size: 1.2em;
    color: $green;
  }
  .textlink {
    color: $primary-blue;
  }

  &:hover {
    //border: 1px dashed $darker-blue;
    .textlink {
      color: $darker-blue;
    }
  }
}
.droparea.dragging {
  background: rgba(255, 255, 255, 0.9);
  border: 2px dashed $green;

  .message {
    display: block;
  }
  .textlink {
    visibility: hidden;
  }

  button {
    visibility: hidden;
  }
}

